# ChangeLog for app-backup/amanda
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/ChangeLog,v 1.84 2011/10/13 15:02:29 idl0r Exp $

*amanda-3.3.0 (13 Oct 2011)

  13 Oct 2011; Christian Ruppert <idl0r@gentoo.org> -amanda-3.1.2-r1.ebuild,
  -amanda-3.1.3.ebuild, +amanda-3.3.0.ebuild:
  Version bump to 3.3.0, fixes bug 361533 and bug 381307.

  13 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> amanda-3.2.1.ebuild:
  amd64/ppc/ppc64 stable wrt #359333

  25 Apr 2011; Raúl Porcel <armin76@gentoo.org> amanda-3.2.1.ebuild:
  sparc stable wrt #359333

  11 Apr 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> amanda-3.2.1.ebuild:
  x86 stable wrt bug #359333

  18 Mar 2011; Christian Ruppert <idl0r@gentoo.org>
  -files/amanda-inetd.amanda.sample-2.5.1_p3-r1,
  -files/amanda-xinetd-2.5.1_p3-r1:
  Remove unused files.

*amanda-3.2.2 (17 Mar 2011)

  17 Mar 2011; Christian Ruppert <idl0r@gentoo.org> -amanda-2.6.0_p2-r1.ebuild,
  -amanda-2.6.0_p2-r2.ebuild, -amanda-2.6.0_p2-r3.ebuild, -amanda-3.1.2.ebuild,
  -amanda-3.2.0_beta1.ebuild, -amanda-3.2.0.ebuild, +amanda-3.2.2.ebuild:
  Version bump to 3.2.2, bug 359287. Remove some older versions.

  29 Dec 2010; Christian Ruppert <idl0r@gentoo.org> amanda-3.2.1.ebuild:
  Move elog block regarding the AMANDA_SERVER environment variable into
  pkg_setup. Install the sample cronjob only on non-minimal setups. Remove the
  --without-krb4-security option since it's no longer valid.

  28 Dec 2010; Christian Ruppert <idl0r@gentoo.org> amanda-3.2.1.ebuild:
  Fix libcurl dependency again.

  28 Dec 2010; Christian Ruppert <idl0r@gentoo.org> amanda-3.2.1.ebuild:
  Make curl and readline optional.

  28 Dec 2010; Christian Ruppert <idl0r@gentoo.org> amanda-3.2.1.ebuild:
  Fix amandahomedir in amaddclient and amserverconfig to use /var/spool/amanda
  instead of /var/spool/amanda/lib/amanda.

*amanda-3.2.1 (19 Dec 2010)
