@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/amanda-3.3.0.ebuild,v 1.1 2011/10/13 15:02:29 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/amanda-3.3.0.ebuild,v 1.2 2011/11/16 07:54:09 robbat2 Exp $
 
 EAPI=3
 inherit autotools eutils perl-module
@@ -269,6 +269,9 @@ src_configure() {
 
 	# IPv6 fun.
 	myconf="${myconf} `use_with ipv6`"
+	# This is to prevent the IPv6-is-working test
+	# As the test fails on binpkg build hosts with no IPv6.
+	use ipv6 && export amanda_cv_working_ipv6=yes
 
 	# I18N
 	myconf="${myconf} `use_enable nls`"
