@@ -1,6 +1,12 @@
 # ChangeLog for app-backup/amanda
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/ChangeLog,v 1.84 2011/10/13 15:02:29 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-backup/amanda/ChangeLog,v 1.85 2011/11/16 07:54:09 robbat2 Exp $
+
+  16 Nov 2011; Robin H. Johnson <robbat2@gentoo.org> amanda-2.6.1_p2.ebuild,
+  amanda-3.2.1.ebuild, amanda-3.2.2.ebuild, amanda-3.3.0.ebuild:
+  Disallow automagic testing of IPv6 working test when IPv6 build is requested.
+  Otherwise breaks the configure when building USE=ipv6 on a buildhost without
+  an IPv6 kernel.
 
 *amanda-3.3.0 (13 Oct 2011)
 
